# tryfastapinotes

./: AGENTS.md  DEVLOG.md  README.md  alembic.ini  database.db  pyproject.toml  skills.md  test.db
alembic/: env.py
alembic/versions/: 259b5dd3d9d6_add_summary_to_notes.py  8fbaab022864_initial_schema.py
app/: crud.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  notes.py  users.py
tests/: conftest.py  test_notes.py  test_notes_authorization.py  test_notes_authz.py  test_users.py
